{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 1404,
  "lineage": "84c8a258-fadf-255b-4e5e-e2cfc163b399",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:646205811716:instance/i-0202474236f12321b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0202474236f12321b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hch-bkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09953b83e3dd81fe8",
            "private_dns": "ip-10-0-1-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.234",
            "public_dns": "ec2-54-225-47-238.compute-1.amazonaws.com",
            "public_ip": "54.225.47.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e2927b70440adc55",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08a393ba1dc338523"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04221a792515d3572",
            "tags": {
              "Name": "Instance 1"
            },
            "tags_all": {
              "Name": "Instance 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a393ba1dc338523"
            ]
          },
          "dependencies": [
            "aws_security_group.hmw-instances-sg",
            "aws_subnet.hmw-public-subnets1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:646205811716:instance/i-0f13188f6d6989181",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f13188f6d6989181",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hch-bkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b6b80ba974d46452",
            "private_dns": "ip-10-0-2-47.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.47",
            "public_dns": "ec2-35-171-166-73.compute-1.amazonaws.com",
            "public_ip": "35.171.166.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b3a230b69b97693e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08a393ba1dc338523"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03eb8764ac87f55ff",
            "tags": {
              "Name": "Instance 2"
            },
            "tags_all": {
              "Name": "Instance 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a393ba1dc338523"
            ]
          },
          "dependencies": [
            "aws_security_group.hmw-instances-sg",
            "aws_subnet.hmw-public-subnets2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:646205811716:instance/i-056e3f6caf98cf390",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056e3f6caf98cf390",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hch-bkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-000bf8653cac7bfe9",
            "private_dns": "ip-10-0-3-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.20",
            "public_dns": "ec2-3-227-16-198.compute-1.amazonaws.com",
            "public_ip": "3.227.16.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0556147935966f363",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08a393ba1dc338523"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00daaa80ef0c34387",
            "tags": {
              "Name": "Instance 3"
            },
            "tags_all": {
              "Name": "Instance 3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a393ba1dc338523"
            ]
          },
          "dependencies": [
            "aws_security_group.hmw-instances-sg",
            "aws_subnet.hmw-public-subnets3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646205811716:internet-gateway/igw-05fc6e6bc15be3f01",
            "id": "igw-05fc6e6bc15be3f01",
            "owner_id": "646205811716",
            "tags": {
              "Name": "homework-gateway"
            },
            "tags_all": {
              "Name": "homework-gateway"
            },
            "vpc_id": "vpc-00361d0c51bdcccea"
          },
          "dependencies": [
            "aws_vpc.hmw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "hmw-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:646205811716:loadbalancer/app/hmw-alb/ce0f66ab2e38d9b7",
            "arn_suffix": "app/hmw-alb/ce0f66ab2e38d9b7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "hmw-alb-1180233492.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:646205811716:loadbalancer/app/hmw-alb/ce0f66ab2e38d9b7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hmw-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04fa14dd01c8a7fa9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00daaa80ef0c34387"
              },
              {
                "subnet_id": "subnet-03eb8764ac87f55ff"
              },
              {
                "subnet_id": "subnet-04221a792515d3572"
              }
            ],
            "subnets": [
              "subnet-00daaa80ef0c34387",
              "subnet-03eb8764ac87f55ff",
              "subnet-04221a792515d3572"
            ],
            "vpc_id": "vpc-00361d0c51bdcccea",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.hmw-sg",
            "aws_subnet.hmw-public-subnets1",
            "aws_subnet.hmw-public-subnets2",
            "aws_subnet.hmw-public-subnets3",
            "aws_vpc.hmw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hmw-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:646205811716:listener/app/hmw-alb/ce0f66ab2e38d9b7/b5f218698d04623e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:646205811716:targetgroup/hmw-alb-tg/f29c5f727514d611",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:646205811716:listener/app/hmw-alb/ce0f66ab2e38d9b7/b5f218698d04623e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:646205811716:loadbalancer/app/hmw-alb/ce0f66ab2e38d9b7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.hmw-alb",
            "aws_lb_target_group.hmw-target-group",
            "aws_security_group.hmw-sg",
            "aws_subnet.hmw-public-subnets1",
            "aws_subnet.hmw-public-subnets2",
            "aws_subnet.hmw-public-subnets3",
            "aws_vpc.hmw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "hmw-alb-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:646205811716:targetgroup/hmw-alb-tg/f29c5f727514d611",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:646205811716:listener-rule/app/hmw-alb/ce0f66ab2e38d9b7/b5f218698d04623e/658bda4b5ade4f0d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:646205811716:listener-rule/app/hmw-alb/ce0f66ab2e38d9b7/b5f218698d04623e/658bda4b5ade4f0d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:646205811716:listener/app/hmw-alb/ce0f66ab2e38d9b7/b5f218698d04623e",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.hmw-alb",
            "aws_lb_listener.hmw-alb-listener",
            "aws_lb_target_group.hmw-target-group",
            "aws_security_group.hmw-sg",
            "aws_subnet.hmw-public-subnets1",
            "aws_subnet.hmw-public-subnets2",
            "aws_subnet.hmw-public-subnets3",
            "aws_vpc.hmw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hmw-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:646205811716:targetgroup/hmw-alb-tg/f29c5f727514d611",
            "arn_suffix": "targetgroup/hmw-alb-tg/f29c5f727514d611",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:646205811716:targetgroup/hmw-alb-tg/f29c5f727514d611",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hmw-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00361d0c51bdcccea"
          },
          "dependencies": [
            "aws_vpc.hmw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-group-att1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:646205811716:targetgroup/hmw-alb-tg/f29c5f727514d611-20230205154132935500000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:646205811716:targetgroup/hmw-alb-tg/f29c5f727514d611",
            "target_id": "i-0202474236f12321b"
          },
          "dependencies": [
            "aws_instance.web-server1",
            "aws_lb_target_group.hmw-target-group",
            "aws_security_group.hmw-instances-sg",
            "aws_subnet.hmw-public-subnets1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-group-att2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:646205811716:targetgroup/hmw-alb-tg/f29c5f727514d611-20230205154133048100000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:646205811716:targetgroup/hmw-alb-tg/f29c5f727514d611",
            "target_id": "i-0f13188f6d6989181"
          },
          "dependencies": [
            "aws_instance.web-server2",
            "aws_lb_target_group.hmw-target-group",
            "aws_security_group.hmw-instances-sg",
            "aws_subnet.hmw-public-subnets2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-group-att3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:646205811716:targetgroup/hmw-alb-tg/f29c5f727514d611-20230205154133191100000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:646205811716:targetgroup/hmw-alb-tg/f29c5f727514d611",
            "target_id": "i-056e3f6caf98cf390"
          },
          "dependencies": [
            "aws_instance.web-server3",
            "aws_lb_target_group.hmw-target-group",
            "aws_security_group.hmw-instances-sg",
            "aws_subnet.hmw-public-subnets3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646205811716:route-table/rtb-0ebf8cb988dbed34e",
            "id": "rtb-0ebf8cb988dbed34e",
            "owner_id": "646205811716",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05fc6e6bc15be3f01",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "homework-route-gateway"
            },
            "tags_all": {
              "Name": "homework-route-gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-00361d0c51bdcccea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_vpc.hmw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078f6b5923a298bb2",
            "route_table_id": "rtb-0ebf8cb988dbed34e",
            "subnet_id": "subnet-04221a792515d3572"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.route-table-gw",
            "aws_subnet.hmw-public-subnets1",
            "aws_vpc.hmw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc1d9c41b7e641e0",
            "route_table_id": "rtb-0ebf8cb988dbed34e",
            "subnet_id": "subnet-03eb8764ac87f55ff"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.route-table-gw",
            "aws_subnet.hmw-public-subnets2",
            "aws_vpc.hmw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-rta3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b198a44471561fa",
            "route_table_id": "rtb-0ebf8cb988dbed34e",
            "subnet_id": "subnet-00daaa80ef0c34387"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.route-table-gw",
            "aws_subnet.hmw-public-subnets3",
            "aws_vpc.hmw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hmw-instances-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646205811716:security-group/sg-08a393ba1dc338523",
            "description": "Allow SSH, HTTP and HTTPS inbound traffic for all instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a393ba1dc338523",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04fa14dd01c8a7fa9"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04fa14dd01c8a7fa9"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http_https",
            "name_prefix": "",
            "owner_id": "646205811716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http_https-access_to_instances"
            },
            "tags_all": {
              "Name": "allow_ssh_http_https-access_to_instances"
            },
            "timeouts": null,
            "vpc_id": "vpc-00361d0c51bdcccea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.hmw-sg",
            "aws_vpc.hmw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hmw-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646205811716:security-group/sg-04fa14dd01c8a7fa9",
            "description": "Allow all incoming traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fa14dd01c8a7fa9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "hmw-sg",
            "name_prefix": "",
            "owner_id": "646205811716",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00361d0c51bdcccea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hmw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hmw-public-subnets1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646205811716:subnet/subnet-04221a792515d3572",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04221a792515d3572",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "646205811716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "homework-public-subnets"
            },
            "tags_all": {
              "Name": "homework-public-subnets"
            },
            "vpc_id": "vpc-00361d0c51bdcccea"
          },
          "dependencies": [
            "aws_vpc.hmw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hmw-public-subnets2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646205811716:subnet/subnet-03eb8764ac87f55ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03eb8764ac87f55ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "646205811716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "homework-public-subnets"
            },
            "tags_all": {
              "Name": "homework-public-subnets"
            },
            "vpc_id": "vpc-00361d0c51bdcccea"
          },
          "dependencies": [
            "aws_vpc.hmw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hmw-public-subnets3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646205811716:subnet/subnet-00daaa80ef0c34387",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00daaa80ef0c34387",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "646205811716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "homework-public-subnets"
            },
            "tags_all": {
              "Name": "homework-public-subnets"
            },
            "vpc_id": "vpc-00361d0c51bdcccea"
          },
          "dependencies": [
            "aws_vpc.hmw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hmw-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646205811716:vpc/vpc-00361d0c51bdcccea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00a2c44d5d0ec5f0b",
            "default_route_table_id": "rtb-068e2b9df47e48d9c",
            "default_security_group_id": "sg-0568273f91d29b5fd",
            "dhcp_options_id": "dopt-044d133d9fe46026b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00361d0c51bdcccea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068e2b9df47e48d9c",
            "owner_id": "646205811716",
            "tags": {
              "Name": "homework-vpc"
            },
            "tags_all": {
              "Name": "homework-vpc"
            }
          }
        }
      ]
    }
  ]
}